# plafond3d

./: .gitignore  README.md  possible_deckenmalerei_errors.txt  pyproject.toml  test_media.css
.dbeaver/: .gitignore
bavarikon/: README.md  bavarikon-Lieferformat.xsd  entities small.json  map_to_xml.py  reduce_dump_size.py  test.xsd
dumps/deckenmalerei.eu/2023_11/: resources.json
dumps/deckenmalerei.eu/2023_11/docs/: Readme.md  entities.schema.json  relations.schema.json  resources.schema.json
dumps/deckenmalerei.eu/2025_02/: resources.json
dumps/heurist/: Export_PLAFOND_3D_20230214133918.json  Export_PLAFOND_3D_20230627132710.json  Export_PLAFOND_3D_20230710142819.json  Export_PLAFOND_3D_20240130101107.json  Export_PLAFOND_3D_20240220113727.json
possible_errors/: Duplicates_2024  Plafond3D_Entities_GND_Duplicates.csv  possible_GND_duplicates.txt  possible_deckenmalerei_duplicates.txt
print_pdf/: README.md  print_and_save.py  print_single_pdf.py  test_media.css
sql/: triggers.sql
src/: .gitignore  db_connection.py  iclass_transl.py  import_dm.py  import_heurist.py  importer.py  popculture.py
src/__pycache__/: .gitignore
